# Skiller

./: .gitignore  README.md  pyproject.toml
.agents/: openai.yaml
.codex/skills/skiller-mcp/: SKILL.md
docs/: architecture.md  hook-plan.md  usage.md
scripts/: install_skiller_hooks.py  skiller_mcp_guard.py  smoke_mcp.py
src/skiller/: __init__.py  cli.py  models.py  server.py  storage.py
tests/: test_skiller_mcp_guard.py  test_storage.py
