[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skiller"
version = "0.1.0"
description = "Local MCP server for capturing, improving, and routing reusable Codex skills."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.28.1",
  "pydantic>=2.11",
  "starlette>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
skiller = "skiller.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

